changes/3.12/68a5a5f38c2d80f74c946972375983ff85d508bb
staging: dgnc: driver.c: Need to include slab.h

With 'allyesconfig', we get following error without this.

drivers/staging/dgnc/dgnc_driver.c: In function ‘dgnc_cleanup_board’:
drivers/staging/dgnc/dgnc_driver.c:459:3: error: implicit declaration of function ‘kfree’ [-Werror=implicit-function-declaration]
   kfree(brd->msgbuf_head);
   ^
drivers/staging/dgnc/dgnc_driver.c: In function ‘dgnc_driver_kzmalloc’:
drivers/staging/dgnc/dgnc_driver.c:905:2: error: implicit declaration of function ‘kmalloc’ [-Werror=implicit-function-declaration]
  void *p = kmalloc(size, priority);

Signed-off-by: Tushar Behera <tushar.behera@linaro.org>
Cc: Lidza Louina <lidza.louina@gmail.com>
Signed-off-by: Greg Kroah-Hartman <gregkh@linuxfoundation.org>

